fix: add missing crossrefs inside docs

--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -34,7 +34,7 @@ Courses serve as a framework within KlickerUZH, facilitating the integration of 
 
 4. Gamification is enabled by default, but can be deactivated. When gamification is activated, participants can join the course and collected points, which are then shown on the live quiz and course leaderboards.
 
-5. Alongside gamification, group creation is enabled by default. If you deactivate this setting, students cannot create groups in this course and you will not be able to create group activities. However, this setting can still be activated on the course overview after course creation. If you enable group creation, you must define the creation deadline, the maximum and preferred group size. For a more detailed explanation of their functionalities, please refer to the corresponding tooltips or check out the documentation on [randomized group creation](verlinken)
+5. Alongside gamification, group creation is enabled by default. If you deactivate this setting, students cannot create groups in this course and you will not be able to create group activities. However, this setting can still be activated on the course overview after course creation. If you enable group creation, you must define the creation deadline, the maximum and preferred group size. For a more detailed explanation of their functionalities, please refer to the corresponding tooltips or check out the documentation on [randomized group creation](/tutorials/course_management/#randomized-student-groups)
 
 After creating a course, you will be directed to the course overview page.
 
