--- a/apps/docs/docs/tutorials/live_qa.mdx
+++ b/apps/docs/docs/tutorials/live_qa.mdx
@@ -24,7 +24,7 @@ Live Quizzes in KlickerUZH can be coupled with a Live Q&A that enables students 
   title="KlickerUZH - Live Q&A"
 ></iframe>
 
-A Live Q&A is embedded in the Live Quiz and can be activated during a Live Quiz session. For more details on the Live Quiz, review the dedicated section (verlinken).
+A Live Q&A is embedded in the Live Quiz and can be activated during a Live Quiz session. For more details on the Live Quiz, review the dedicated [tutorial on live quiz creation](/tutorials/live_quiz/).
 
 1. Activate Live Q&A: As soon as you activate a question block (displayed in green), the Live Q&A can be activated.
 2. Manage questions: By clicking on the eye symbol, you can make the question visible for all the participants. The question can then not only be seen by others, but also be upvoted. Furthermore, you can sort the incoming questions or delete them.
