--- a/apps/docs/docs/tutorials/live_quiz.mdx
+++ b/apps/docs/docs/tutorials/live_quiz.mdx
@@ -34,13 +34,13 @@ Live Quizzes in KlickerUZH involve real-time interaction during lectures to fost
 
 **Adjust the settings:**
 
-4. Course: In this field, the Live Q&A can optionally be assigned to a course. If you wish to do this and need help creating a course, please review the Course Management tutorial (verlinken).
+4. Course: In this field, the Live Q&A can optionally be assigned to a course. If you wish to do this and need help creating a course, please review the [tutorial on course management](/tutorials/course_management/).
 5. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated.
 6. Gamification: The slider can be used to decide whether gamification should be applied to the respective Live Quiz. Note that gamified Live Quizzes should only be used in gamified courses.
 
 **Create blocks using existing questions:**
 
-For this step, existing questions are required. If you need help with creating questions, please review the Question Management tutorial (verlinken).
+For this step, existing questions are required. If you need help with creating questions, please review the [tutorial on element management](/tutorials/element_management/).
 
 7. There are multiple options how to add a question to a block:
    7.1. Drag: The desired question can be added to a specific block by simply dragging the question onto the plus sign below the desired block.
@@ -76,7 +76,7 @@ Once the session is stared, there are the following steps to take:
 1. QR Code: To share the QR code, you can either click on "Present QR code" and copy the link (recommended) or take a screenshot of the QR code and share it.
 2. Start first/next block: In order for the participants to see the particular block of questions, click the Start first/next block button.
 3. Activate Feedback: If the feedback option is activated, in addition to answering the question, participants also have the possibility to provide feedback on the speed and difficulty of the question.
-4. Activate Live Q&A: If the Live Q&A is activated, participants can ask follow-up questions they may have and provide written feedback. For more details on the Live Q&A, review the dedicated section (verlinken).
+4. Activate Live Q&A: If the Live Q&A is activated, participants can ask follow-up questions they may have and provide written feedback. For more details on the Live Q&A, review the dedicated [tutorial section](/tutorials/live_qa/).
 5. Audience view: Under Audience view the view of the participants can be seen.
 6. Evaluation: Under Evaluation the results and the number of participants for each block and question can be viewed. The display of the results can be customized to the user's preferences. The user can choose between a table or a bar chart to show results, the font size can be adjusted and lastly the solutions can be presented directly in the result chart.
 7. Leaderboard: Only participants who are signed in can appear on the leaderboard and earn points.
