--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -39,7 +39,7 @@ The Practice Quiz activity consists of longer question sets that specifically ta
 
 **Adjust the settings:**
 
-4. Course: In this field, the Practice Quiz has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the Course Management tutorial (verlinken).
+4. Course: In this field, the Practice Quiz has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the [tutorial on course management](/tutorials/course_management/).
 5. Multiplier: The multiplier is a factor with which the awarded points are multiplied when a question is answered. This field is only available if the practice quiz is included in a gamified course and participants collect points for correct answers.
 6. Repetition interval: Practice Quizzes are characterized by their spaced repetition. Here, the period is chosen after which the participants can repeat the Quiz.
 7. Order: The order in which the questions are to be solved by the participants is selected here. It is possible to choose between the following setups: Last response first, sequential or shuffled.
