enhance: add documentation for LTI / OLAT integration

--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -37,7 +37,7 @@ Microlearning offers short learning units with a limited number of questions, pu
 
 **Adjust the settings:**
 
-4. Course: In this field, the Microlearning session has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the [tutorial on course management](/tutorials/course_management).
+4. Course: In this field, the Microlearning session has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently of a course. If you need help creating a course, please review the [tutorial on course management](/tutorials/course_management).
 5. Start/End date: Microlearnings are limited in time. These fields determine the starting and ending points at which the participants have access to the session.
 6. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated .
 
