chore: integrate review comments

--- a/apps/docs/docs/tutorials/element_management.mdx
+++ b/apps/docs/docs/tutorials/element_management.mdx
@@ -55,7 +55,7 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
   title="KlickerUZH - Element Management"
 ></iframe>
 
-Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
+Since elements (i.e., questions, flashcards, and content elements) can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
 
 1. Questions can be grouped based on tags and It is possible to search for question titles in the search field.
 2. Questions can be listed by creation date or by title (alphabetically, from a -> z or from z -> a)
