--- a/apps/docs/docs/tutorials/lti_integration.mdx
+++ b/apps/docs/docs/tutorials/lti_integration.mdx
@@ -3,7 +3,7 @@ title: Integration with LTI
 hide_title: true
 ---
 
-# Integration with LTI (Example: OLAT)
+# Integration with LTI (Example: UZH OLAT)
 
 KlickerUZH can be used within an LMS (Learning Management System) through the LTI 1.3 standard. When integrated, KlickerUZH can use the LMS's authentication mechanism to authenticate students (or to create an account for them) and grant them access to the corresponding KlickerUZH content.
 
@@ -31,7 +31,7 @@ In the self-learning area of your OLAT course, it makes sense to embed Practice 
 How can I integrate KlickerUZH pages into my OLAT course?
 To successfully integrate the KlickerUZH pages into your OLAT course, follow the steps outlined below. These instructions are only applicable for UZH members. Our LTI-Integration is currently not supported outside of the UZH OLAT environment (if you would like to use it at your institution, please have the administrators of your learning management system reach out to us).
 
-To create a KlickerUZH element, you always start by creating a new course element of the type “LTI Page”. The subsequent steps depend on the type of KlickerUZH element you would like to create (as listed below).
+To embed a KlickerUZH element in OLAT, you always start by creating a new course element of the type “LTI Page”. The subsequent steps depend on the type of KlickerUZH element you would like to create (as listed below).
 
 1. Course overview and documentation:
 
