--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -44,7 +44,7 @@ Microlearning offers short learning units with a limited number of questions, pu
 **Choose your questions:**
 
 For this step, existing questions are required. Note that Microlearning and Practice Quizzes support all element types except from free-text questions, as long as a valid sample solution is specified. If you need help with creating questions or content elements / flashcards, please review the [tutorial on element management](/tutorials/element_management/).
-When adding questions, you can choose to have one or multiple questions per stack. It makes sense to have several questions per stack if you provide your students with a task / case study that builds up and the questions are connected. Stacks in practice quizzes can optionally be ordered according to a spaced repetition logic based on the student’s individual responses, while questions within a stack will always be shown in sequence.
+When adding questions, you can choose to have one or multiple questions per stack. It makes sense to have several questions per stack if you provide your students with a task / case study that builds up and the questions are connected.
 
 There are multiple options to add a question to a stack:
 
