--- a/apps/docs/docs/tutorials/supported_element_types.mdx
+++ b/apps/docs/docs/tutorials/supported_element_types.mdx
@@ -2,12 +2,12 @@
 title: Supported Element Types
 ---
 
-Based on learning settings or learning goals, you can choose from seven different question types in KlickerUZH. Most presented element types support the definition of a sample solution, which is used for automated grading processes in asynchronous KlickerUZH activities, such as practice quizzes and microlearnings. To use a question in a live quiz setting, you do not have to provide information on the answer correctness.
-For a more detailed description on how to create the listed elements in the KlickerUZH lectur-er interface, please refer to the documentation on [question manage-ment](/tutorials/element_management/) or check out the tooltips for the corresponding fields in the editor directly.
+Based on learning settings or learning goals, you can choose from seven different element types in KlickerUZH (i.e., five types of questions, content elements, and flashcards). Questions support the definition of a sample solution, which is used for automated grading processes in asynchronous KlickerUZH activities, such as practice quizzes and microlearnings. To use a question in a live quiz setting, you do not have to provide information on the answer correctness.
+For a more detailed description on how to create the listed elements in the KlickerUZH lecturer interface, please refer to the documentation on [element management](/tutorials/element_management/) or check out the tooltips for the corresponding fields in the editor directly.
 
 ## Single Choice (SC)
 
-For single choice questions, students select one of the available answer options. You should specify the correct answer and may also provide feedback and an explanation if desired. These elements can be formatted using the editor, Markdown, or LaTeX syntax, and images can be included as needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+For single choice questions, students select one of the available answer options. You should specify the correct answer and may also provide feedback (per answer option) and an explanation if desired. These elements can be formatted using the editor, Markdown, or LaTeX syntax, and images can be included as needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
 
 ![Single Choice Question - Lecturer View](/img_v3/supported_element_types/SC_lecturer.png)
 
@@ -19,7 +19,7 @@ For **students**, single choice questions are viewed as follows, with the soluti
 
 ## Multiple Choice (MC)
 
-With multiple choice questions one or more of the provided answers may be correct. You should mark correct answers and can offer feedback and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+With multiple choice questions one or more of the provided answers may be correct. You should mark correct answers and can offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
 
 ![Multiple Choice Question - Lecturer View](/img_v3/supported_element_types/MC_lecturer.png)
 
@@ -31,7 +31,7 @@ For **students**, multiple choice questions are viewed as follows, with the solu
 
 ## Kprime (KP)
 
-Kprime questions always present four possible answers, each of which may be correct or incorrect. This format has proven effective for theoretical assessments due to its good selectivity and low likelihood of success when guessing. You can mark each answer option as correct or incorrect and offer feedback and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+Kprime questions always present four possible answers, each of which must be marked as correct or incorrect. This format has proven effective for theoretical assessments due to its good selectivity and low likelihood of success when guessing. You can mark each answer option as correct or incorrect and offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
 
 ![Kprime Question - Lecturer View](/img_v3/supported_element_types/KP_lecturer.png)
 
@@ -43,7 +43,7 @@ For **students**, Kprime questions are viewed as follows, with the solution (and
 
 ## Free Text (FT)
 
-Free text questions enable students to respond to the question by typing in their answer. Free text questions can be integrated into live quizzes and group activities (not practice quizzes and microlearnings). You can specify additional restrictions, like a maximum length, as well as sample solutions for graded and gamified settings. All of those texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+Free text questions enable students to respond to the question by typing in their answer. Free text questions can be integrated into live quizzes and group activities (not practice quizzes and microlearnings). You can specify additional restrictions, like a maximum length, as well as sample solutions for graded and gamified settings (note that the student response must match one of the sample solutions exactly to be counted as correct). All of those texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
 
 ![Free Text Question - Lecturer View](/img_v3/supported_element_types/FT_lecturer.png)
 
