--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -26,15 +26,15 @@ Courses serve as a framework within KlickerUZH, facilitating the integration of 
   title="KlickerUZH - Course Preparation"
 ></iframe>
 
-1. Starting from the Courses page, you can create a new course. The Course Name and Display Name can be the same or different. While the Course Name is only visible internally and serves for identification purposes, the Display name is what participants will see. If the course is associated with a lecture and/or a course in an LMS, it is recommended to choose the same name.
+1. Starting from the Courses page, you can create a new course. The Course Name and Display Name can be the same or different. While the Course Name is only visible internally and serves for your own identification purposes, the Display Name is what participants will see. If the course is associated with a lecture and/or a course in an LMS, it is recommended to choose the same name.
 
 2. The Description field is visible to participants and can contain information such as course objectives. An overview of all activities associated with the course throughout its duration can also be embedded using an image, helping students to know what to expect and where they can collect points.
 
 3. The course color can be adjusted to match the color used in the Learning Management System (LMS), if the course is utilized in an LMS.
 
-4. Gamification is enabled by default, but can be deactivated. When gamification is activated, participants can join the course and collected points, which are then shown on the live quiz and course leaderboards.
+4. Gamification is enabled by default, but can be deactivated. When gamification is activated, participants can join the course and collect points, which are then shown on the live quiz and course leaderboards.
 
-5. Alongside gamification, group creation is enabled by default. If you deactivate this setting, students cannot create groups in this course and you will not be able to create group activities. However, this setting can still be activated on the course overview after course creation. If you enable group creation, you must define the creation deadline, the maximum and preferred group size. For a more detailed explanation of their functionalities, please refer to the corresponding tooltips or check out the documentation on [randomized group creation](/tutorials/course_management/#randomized-student-groups)
+5. When gamification is enabled, group creation is enabled by default. If you deactivate this setting, students cannot create groups in this course and you will not be able to create group activities. However, this setting can still be activated on the course overview after course creation. If you enable group creation, you must define the creation deadline, the maximum and preferred group size. For a more detailed explanation of their functionalities, please refer to the corresponding tooltips or check out the documentation on [randomized group creation](/tutorials/course_management/#randomized-student-groups)
 
 After creating a course, you will be directed to the course overview page.
 
@@ -72,25 +72,25 @@ Participants also have the option to participate in activities anonymously witho
 
 ## (Randomized) Student Groups
 
-If enabled for the specific course a participant has joined, students can create groups. By simply providing a name for the group and selecting the corresponding action, a new group can be created. Peer students are then able to join this group through the PIN provided on the group overview page.
+If group creation has been enabled for the specific course, students can create groups with their peers by simply providing a name for the group and selecting the corresponding action. The students' peers are then able to join their group through the PIN provided on the group overview page.
 
 The randomized group creation feature in KlickerUZH simplifies the process of forming student groups in large courses, especially when students may not know their peers. This feature is available for all gamified courses that have group formation enabled. Instead of manually creating or joining a group, students can opt to be randomly assigned to a group with others who have also chosen this option.
 
-This process helps ensure that groups are formed fairly and efficiently. The system automatically creates new groups and finalizes them at the group creation deadline set by the lecturer, providing a seamless group formation experience. The following steps must be completed to use the randomized group creation feature in KlickerUZH.
+This process helps ensure that groups are formed fairly and efficiently. The system automatically creates new groups each day and finalizes the process at the group creation deadline set by the lecturer, after which no further groups can be created and no changes to existing groups can be made anymore. The following steps must be completed to use the randomized group creation feature in KlickerUZH.
 
 1. Enable group creation: Ensure that the group creation feature is enabled for your course. If you haven’t enabled it during the course creation, you can do so in the course editor on the course overview page.
 
-2. Select randomized group assignment: Students can opt to be randomly assigned to a group by selecting the option during the group formation process in the student app.
+2. Have students select randomized group assignment: Students can opt to be randomly assigned to a group by selecting the option during the group formation process in the student app.
 
 ![Random Group Creation - Student View](/img_v3/17_random_groups_student.png)
 
-3. Automatic group creation during the creation period: Groups are created automatically every day, as long as there are at least twice the number of students as the preferred group size in the pool. The preferred group size is determined during course creation and cannot be modified later.
+3. Automatic group creation during the creation period: Groups are created automatically every day, as long as there are at least twice the number of students as the preferred group size in the pool. The preferred group size is determined during course creation and cannot be modified later. KlickerUZH will try to adhere to your preferred group size as much as possible.
 
 4. Automatic group creation at the deadline: Once the group creation deadline is reached, KlickerUZH automatically finalizes all groups:
 
    1. Participants that are alone in a group are automatically added to the random assignment pool, while their group is resolved.
    2. Students remaining in the assignment pool are evenly distributed into new groups to match the preferred group size.
 
-5. Manual group creation during the creation period: Lecturers can manually finalize group assignments at any time through the course’s group overview page (ahead of the group formation deadline). To do so, you can select the “Assign random groups” button within the group overview on the course page (screenshot below). This will close group creation and distribute students from the pool into existing groups as described in the previous step. To reopen group formation after manual finalization, lecturers can extend the deadline in the course settings.
+5. Manual group creation during the creation period: Lecturers can manually finalize group assignments at any time through the course’s group overview page (ahead of the group formation deadline). This allows you to use randomized group formation in a single in-class session instead of across a longer timespan. To do so, you can select the “Assign random groups” button within the group overview on the course page (screenshot below). This will close group creation and distribute students from the pool into existing groups as described in the previous step. To reopen group formation after manual finalization, lecturers can extend the deadline in the course settings.
 
 ![Random Group Creation - Lecturer View](/img_v3/18_random_groups_lecturer.png)
