chore: add skip launch page hints to lti docs

--- a/apps/docs/docs/tutorials/lti_integration.mdx
+++ b/apps/docs/docs/tutorials/lti_integration.mdx
@@ -62,7 +62,7 @@ To embed a KlickerUZH element in OLAT, you always start by creating a new course
 3. Leaderboard:
 
    - The leaderboard is also integrated into an LTI page.
-   - Follow the same settings as before.
+   - Activate “Skip launch page”.
    - The correct URL can be found in the top right corner of your KlickerUZH course page under “Other actions” > “Copy LTI link (Leaderboard)”.
 
 <img
@@ -82,6 +82,7 @@ To embed a KlickerUZH element in OLAT, you always start by creating a new course
 5. Activity Links:
    - As with the previous elements, you can add an LTI page to your self-learning modules and select KlickerUZH as your LTI Version.
    - The correct URL to integrate practice quizzes / microlearning / live quizzes can be found on the KlickerUZH course page, under “Practice Quizzes” > “Other actions” > “Copy LTI link” (or the corresponding action dropdowns for the other activity types).
+   - Activate “Skip launch page”.
 
 <img
   style={{ width: 800 }}
