--- a/apps/docs/docs/tutorials/element_management.mdx
+++ b/apps/docs/docs/tutorials/element_management.mdx
@@ -1,5 +1,5 @@
 ---
-title: Question Management
+title: Element Management
 ---
 
 ## What is a question?
@@ -52,10 +52,10 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
   referrerPolicy="no-referrer-when-downgrade"
   sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
   frameborder="0"
-  title="KlickerUZH - Question Management"
+  title="KlickerUZH - Element Management"
 ></iframe>
 
-Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
+Since elements (i.e., questions, flashcards, and content elements) can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
 
 1. Questions can be grouped based on tags and It is possible to search for question titles in the search field.
 2. Questions can be listed by creation date or by title (alphabetically, from a -> z or from z -> a)
