--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -37,20 +37,25 @@ Microlearning offers short learning units with a limited number of questions, pu
 
 **Adjust the settings:**
 
-4. Course: In this field, the Microlearning session has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the Course Management tutorial (verlinken).
+4. Course: In this field, the Microlearning session has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently of a course. If you need help creating a course, please review the [tutorial on course management](/tutorials/course_management).
 5. Start/End date: Microlearnings are limited in time. These fields determine the starting and ending points at which the participants have access to the session.
 6. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated .
 
 **Choose your questions:**
 
-For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based questions can be implemented. If you need help with creating questions, please review the Question Management tutorial (verlinken).
+For this step, existing questions are required. Note that Microlearning and Practice Quizzes support all element types except from free-text questions, as long as a valid sample solution is specified. If you need help with creating questions or content elements / flashcards, please review the [tutorial on element management](/tutorials/element_management/).
+When adding questions, you can choose to have one or multiple questions per stack. It makes sense to have several questions per stack if you provide your students with a task / case study that builds up and the questions are connected.
 
-7. Questions: The desired question can be added to the session by simply dragging the question onto the plus sign.
+There are multiple options to add a question to a stack:
+
+7. Drag & Drop: The desired question can be added to a specific stack by simply dragging the question onto the plus sign below the desired stack.
 8. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
+9. Select: It is also possible to select one or more questions (with the checkboxes next to them) and insert them into the desired stack or stacks by clicking on the yellow boxes that appear on selection. In this way, questions can be grouped and/or stacked for sequential presentation.
+10. Ordering: To order individual elements within a certain stack or move entire stacks (mainly for sequentially ordered practice quizzes), please use the provided arrows.
 
 **End of preparation:**
 
-9. With a click on Create your first Microlearning session is prepared!
+11. With a click on Create your first Microlearning session is prepared!
 
 ## How can I publish a Microlearning and make it accessible to participants?
 
