--- a/apps/docs/docs/student_tutorials/groups_activities.mdx
+++ b/apps/docs/docs/student_tutorials/groups_activities.mdx
@@ -1,5 +1,5 @@
 ---
-title: Groups and Group Activities - Student View
+title: Groups and Group Activities
 ---
 
 ## Creating / Joining Groups and Group Activities
@@ -11,6 +11,22 @@ Through a tab on the course page, students can either create a new group or join
 ![Group Activity in Mobile View](/img_v3/10_group_overview.png)
 
 ## Solve a Group Activity
+
+<iframe
+  id="kmsembed-0_lsdqyyc0"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_lsdqyyc0/uiConfId/23449004/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH v3.1 - Group Activities: Student View"
+></iframe>
 
 Once a group activity is published, students can access it from the course overview shown above. After the group activity and given that the group formation has been finalized, the students can "start" the group activity. Through this, the available hints will automatically be distributed between all group members. The students can then solve the questions together and submit their answers. The group activity will be automatically closed at the specified end date. After this date, participants will no longer be able to submit their answers.
 
