--- a/apps/docs/docs/tutorials/group_activity.mdx
+++ b/apps/docs/docs/tutorials/group_activity.mdx
@@ -15,6 +15,22 @@ Currrently, student submissions need to be graded manually, but we are evaluatin
 
 ## How can I create a Group Activity?
 
+<iframe
+  id="kmsembed-0_5sz1kqgj"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5sz1kqgj/uiConfId/23449004/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH v3.1 - Group Activities: Creation"
+></iframe>
+
 To create a group activity, navigate to the question pool and use the button at the top to start the group creation wizard. The wizard will guide you through the process of creating a group activity. You can add a general introduction text, hints and questions. The different components / settings are explained in the following sections.
 
 In a first step, you will be asked to provide general information about the group activity. The following fields are available for customization:
@@ -55,7 +71,21 @@ From the course overview, you can execute a set of actions on the group activity
 
 ## How can I grade the submissions to a Group Activity
 
-![Group Activity Grading View](/img_v3/14_group_activity_grading.png)
+<iframe
+  id="kmsembed-0_bbz7dszp"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_bbz7dszp/uiConfId/23449004/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH v3.1 - Group Activities: Grading"
+></iframe>
 
 After the group activity has ended, you can grade the submissions of the participants. To do so, navigate to the course overview and select the grading on the corresponding group activity. This will open the grading view, where you can see the submissions of the participants and grade them (as illustrated above). The following feedback options are available:
 
@@ -65,3 +95,5 @@ After the group activity has ended, you can grade the submissions of the partici
 - **Submission Feedback** (optional): Right below the pass / fail decision, you can provide feedback to the group's submission as a whole.
 
 Please notice, that **grading a submission will not make it immediately visible to the students!** Only once all the submissions for a group activity have a valid grading decision, the grading can be **finalized** using the corresponding button in the grading view. After finalizing the grading, the results will be visible to the participants.
+
+![Group Activity Grading View](/img_v3/14_group_activity_grading.png)
