chore: add lint-staged, run syncpack format

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@klicker-uzh/i18n",
-  "type": "module",
   "files": [
     "index.ts",
     "messages/"
@@ -13,5 +12,6 @@
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
