enhance: add documentation section on gamification

--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -1,5 +1,49 @@
 ---
-title: Overview
+title: Overview and Concept
 ---
 
-> COMING SOON
+## Introduction
+
+KlickerUZH integrates a comprehensive gamification framework throughout the application, designed to enhance student motivation and engagement. Participants can create personalized avatars and collect points for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different leaderboards, fostering a sense of achievement and driving students to improve their performance.
+
+The gamification system extends beyond individual competition and also promotes collaboration. Students can form form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and achievements are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
+
+KlickerUZH's gamification features are designed to provide immediate feedback and recognition, helping students track their progress over time and stay motivated. On top of course specific points, students also collect experience points that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
+
+For a more detailed overview of the gamification features, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
+
+## Gamified Activities and Competition
+
+All KlickerUZH activities have gamification built into their core. While gamification remains optional in most activities, it is automatically enabled when an activity is integrated into a gamified course, requiring no additional setup from lecturers. For more information on the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
+
+In gamified live quizzes, students receive points for answering questions and additional bonus points, if a sample solution has been provided and the entered response is correct. The synchronous setup of live quizzes allows for a grading system where the first correct answer receives the highest number of bonus points, with a subsequent linear decrease over time. Once a live quiz block is closed, students can see their ranking on the live quiz leaderboard. At the end of each quiz, students automatically receive achievements for first, second, and third place, and the collected points are transferred to the course leaderboard.
+
+In practice quizzes and microlearnings students receive points and experience points based on the correctness of their answers. Collected points are displayed on the course leaderboard, while experience points are available across courses and are linked to the user level on their profile view.
+
+## Groups and Collaboration
+
+KlickerUZH features group activities to promote collaboration alongside competition. By completing group activities, students can earn group points, which are added to their average member scores and displayed on a separate group leaderboard within the course overview. Collaboration is encouraged through the distribution of hints among group members, which are necessary to solve the posed questions. The random group creation feature enables lecturers to conduct group activities in large lecture settings where students may not know each other beforehand.
+
+In addition to points, students receive achievements for completing and successfully solving group activities. These achievements and the number of times they have been earned are displayed on the student profile view.
+
+## Participant Experience
+
+Students using KlickerUZH's gamified elements can:
+
+- Create personalized avatars
+- Earn points and experience points (XP) through various learning activities
+- Track their individual performance and ranking within courses
+- Collaborate in groups and participate in group challenges
+- Progress through levels as they accumulate XP
+- Engage in friendly competition through leaderboards
+
+## Goals of Gamification
+
+The gamification features in KlickerUZH are designed to work together to create an engaging and effective learning experience for students while providing lecturers with tools to enhance their teaching methods:
+
+- Enhance engagement and motivation
+- Encourage active participation and involvement in the learning process
+- Create a dynamic and immersive learning environment
+- Provide opportunities for healthy competition
+- Offer immediate feedback, rewards, and recognition for accomplishments
+- Support students' progress and growth throughout their learning journey
